--- a/author-service.yml
+++ b/author-service.yml
@@ -15,7 +15,7 @@ spring:
         format_sql: false
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yml
-    default-schema: infection
+    default-schema: author
 
 server:
   port: 8083
